Refactor: Lists and conditional expressions
+ Delete all Object extension (implicit for all objects)
+ Fix some ArrayList<> types when possible (some of them didn't have a specific type, this could be a problem when wrongly filled with other objects)
+ Change Implementation<T> to Interface<T>
+ Clear some if conditions (like if(<condition> == true) -> if (<condition>)) 
+ Clear some returns (some of them will return directly boolean method instead of using a if else)
+ Fix some double divisions (I thought some could have returned integer instead of double)
+ Clear some deprecated calls (like new Integer(), new Double(), new Boolean())
+ Clear some code (like in Basis.saveToStream(..) method, where code was duplicated with only a little change during writeUTF(..) calls)
+ Use for each instead of for in cases of multiple calls of an array element
+ Change some conditions (item.indexOf("1D_") > -1 ->item.contains("1D_"))
+ Change some methods, adviced by IDE (like: Boolean.valueOf(..) -> Boolean.parseBoolean(..))